<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LafoscaPlaya</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="create_username">Username</string>
    <string name="create_password">Password</string>
    <string name="create_username_hint">Type a name</string>
    <string name="create_password_hint">Type a password</string>
    <string name="button_create_text">Create a new user</string>
    <string name="button_login_text">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <string name="user_created">User created</string>
    <string name="login_successful">Login successfully</string>
    <string name="login_error">Incorrect username or password. Make sure that they are typed correctly.</string>
    <string name="title_activity_maintaining_beach">MaintainingBeachActivity</string>
    <string name="get_beach_state">Get beach state</string>
    <string name="open_close_btn_text">Open/Close beach</string>
    <string name="open_beach">The beach has been opened</string>
    <string name="close_beach">The beach has been closed</string>
    <string name="clean_beach">The beach has been cleaned</string>
    <string name="nivea_rain">Throwing NIVEA beach balls to our visitors</string>
    <string name="clean_btn_text">Clean beach</string>
    <string name="nivea_btn_text">Nivea rain</string>
    <string name="children_btn_text">Find children</string>
    <string name="open_beach_error">You have to open the beach before performing this action</string>
    <string name="close_beach_error">You have to close the beach before performing this action</string>
    <string name="state_beach_error">You have to get the state of the beach before performing this action</string>
    <string name="title_activity_find_children">FindChildrenActivity</string>
    <string name="search_text">Searching</string>

</resources>
