<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/username_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_username" />
    
    <EditText 
        android:id="@+id/username_editText"
        android:layout_below="@+id/username_create"
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:hint="@string/create_username_hint"
        />
    
    <TextView
        android:id="@+id/password_create"
        android:layout_below="@+id/username_editText"
        android:layout_marginTop="20dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_password" />
    
    <EditText 
        android:id="@+id/password_editText"
        android:layout_below="@+id/password_create"
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/create_password_hint"
        />
    
    <Button 
        android:id="@+id/create_button"
        android:layout_below="@+id/password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/button_create_text"
        />
    
    <Button 
        android:id="@+id/login_button"
        android:layout_below="@+id/create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/button_login_text"
        />
    

</RelativeLayout>
