<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MaintainingBeachActivity" >

    <Button 
        android:id="@+id/beach_state_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/get_beach_state"
        />
    
     <ImageView 
        android:id="@+id/img"
        android:layout_below="@+id/beach_state_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:src="@drawable/lafosca1"
        />
    
     <Button 
        android:id="@+id/open_close_button"
        android:layout_below="@+id/beach_state_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/open_close_btn_text"
        />
     
     <Button 
        android:id="@+id/clean_button"
        android:layout_below="@+id/open_close_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/clean_btn_text"
        />
     
     <Button 
        android:id="@+id/nivea_button"
        android:layout_below="@+id/clean_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/nivea_btn_text"
        />
     
     <Button 
        android:id="@+id/children_button"
        android:layout_below="@+id/nivea_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/children_btn_text"
        />
     
     <TextView 
        android:id="@+id/error_text"
        android:layout_below="@+id/children_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:textColor="#ff0000"
        android:visibility="gone"
         />
     
     <TextView 
        android:id="@+id/state_text"
        android:layout_below="@+id/children_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
         />

</RelativeLayout>
